# egui_software_backend

./: Cargo.toml  README.md  deny.toml
.github/workflows/: rust.yml
examples/: winit.rs  winit_hello.rs  winit_raw.rs
src/: color_avx512bw.rs  dirty_rect.rs  lib.rs  render.rs  stats.rs  test_render.rs  winit.rs
src/raster/: rect.rs  tri.rs
tests/: mod.rs
